--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".HomeActivity"
+			android:name=".TasksActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
 			android:hardwareAccelerated="true"
 			android:supportsPictureInPicture="true"
@@ -93,4 +93,4 @@
 			android:name="org.apache.http.legacy"
 			android:required="false"/>
 	</application>
-</manifest>
+</manifest>
