--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /.gradle/
 /app/build/
 /app/build/intermediates/javac/debug/classes/
+/app/release/JobManager.apk
+/app/release/output-metadata.json
