--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 	implementation 'com.github.bumptech.glide:glide:3.7.0'
 	implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
