--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 }
