--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:label="Task Manager"
         android:largeHeap="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
         <activity
             android:name=".PaymentsActivity"
             android:exported="false" />
@@ -28,7 +29,8 @@
             android:supportsPictureInPicture="true"
             android:theme="@style/AppTheme.FullScreen"
             android:windowSoftInputMode="stateHidden"
-            tools:targetApi="n">
+            tools:targetApi="n"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
