--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@drawable/icon_app"
+        android:icon="@mipmap/ic_launcher"
         android:label="Task Manager"
         android:largeHeap="true"
         android:theme="@style/AppTheme"
