--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,28 +21,24 @@
         tools:targetApi="m">
 
         <receiver
-            android:name=".BootDeviceReceiver"
+            android:name=".BootReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="android.intent.action.SCREEN_ON" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="my.virkato.task.manager.START_SERVICE" />
             </intent-filter>
         </receiver>
 
         <service
             android:name=".AlertService"
             android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" />
+            android:exported="true" />
 
         <activity
             android:name=".PaymentsActivity"
             android:hardwareAccelerated="true"
-            android:screenOrientation="fullSensor"
-            android:exported="true" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
